@@ -1,3 +1,8 @@
+2020-01-31  Tamar Christina  <tamar.christina@arm.com>
+
+	PR rtl-optimization/91838
+	* g++.dg/pr91838.C: New test.
+
 2020-01-30  David Malcolm  <dmalcolm@redhat.com>
 
 	* gcc.dg/analyzer/malloc-1.c: Remove include of <string.h>.
