@@ -1,3 +1,9 @@
+2020-01-31  Tamar Christina  <tamar.christina@arm.com>
+
+	PR rtl-optimization/91838
+	* simplify-rtx.c (simplify_binary_operation_1): Update LSHIFTRT case
+	to truncate if allowed or reject combination.
+
 2020-01-31  Andrew Stubbs  <ams@codesourcery.com>
 
 	* tree-ssa-loop-ivopts.c (get_iv): Use sizetype for zero-step.
